# django_admin_panel

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  requirements.txt
app/movies/: admin.py  models.py
app/movies/migrations/: 0001_initial.py
app/uwsgi/: uwsgi.ini
django_api/: .env.template  docker-compose.yml
django_api/app/movies/: models.py
django_api/config/: urls.py
django_api/config/settings/: __init__.py
django_api/etc/nginx/conf.d/: site.conf
django_api/movies/api/v1/: urls.py  views.py
django_api/movies/migrations/: 0001_initial.py
docker_compose/: docker-compose.yml
docker_compose/app/: .env.template  Dockerfile  requirements.txt
docker_compose/app/config/settings/: __init__.py
docker_compose/app/config/settings/components/: base.py  database.py
docker_compose/app/config/settings/environments/: prod.py
docker_compose/nginx/site_conf/: site.conf
etc/nginx/: nginx.conf
fixtures/: dump.json
